components/device-registry/manifests/device-registry-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"mongo"}]
  name: ntt-device-registry
  labels:
    app: ntt-device-registry
    app.kubernetes.io/part-of: device-registry-app
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntt-device-registry
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ntt-device-registry
        deploymentconfig: ntt-device-registry
    spec:
      containers:
        - name: ntt-device-registry
          image: quay.io/oschneid/ntt-device-registry:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
